# backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  logging.py  middleware.py  rate_limit.py  scheduler.py  security.py
app/db/: base.py  session.py
app/dependencies/: admin_user.py  announcement.py  auth.py  co_admin_invite.py  gamification.py  masjid.py  masjid_campaign.py  masjid_event.py  masjid_photo.py  masjid_report.py  masjid_review.py  platform_settings.py  prayer_times.py  storage.py  support_ticket.py  user_masjid_follow.py
app/models/: announcement.py  audit_log.py  enums.py  masjid.py  masjid_campaign.py  masjid_co_admin_invite.py  masjid_event.py  masjid_report.py  masjid_review.py  platform_settings.py  prayer_times.py  support_ticket.py  user_badge.py  user_checkin.py  user_journal_entry.py  user_masjid_follow.py  user_profile.py
app/repositories/: announcement_repository.py  audit_log_repository.py  base.py  co_admin_invite_repository.py  masjid_campaign_repository.py  masjid_event_repository.py  masjid_photo_repository.py  masjid_report_repository.py  masjid_repository.py  masjid_review_repository.py  platform_settings_repository.py  prayer_time_repository.py  support_ticket_repository.py  user_badge_repository.py  user_checkin_repository.py  user_journal_repository.py  user_masjid_follow_repository.py  user_profile_repository.py
app/routers/: admin.py  announcements.py  auth.py  campaigns.py  co_admins.py  events.py  gamification.py  masjids.py  prayer_times.py  support.py  users.py
app/schemas/: admin.py  announcement.py  auth.py  co_admin_invite.py  gamification.py  masjid.py  masjid_campaign.py  masjid_event.py  masjid_report.py  masjid_review.py  platform_settings.py  prayer_times.py  support_ticket.py  user.py
app/services/: admin_user_service.py  announcement_service.py  co_admin_invite_service.py  email_service.py  gamification_service.py  gotrue_client.py  masjid_campaign_service.py  masjid_event_service.py  masjid_photo_service.py  masjid_report_service.py  masjid_review_service.py  masjid_service.py  platform_settings_service.py  prayer_calculator.py  prayer_time_service.py  storage.py  support_ticket_service.py  user_masjid_follow_service.py  user_service.py
docs/: auth-plan.md  sprint-1.md
migrations/: env.py
migrations/versions/: 05e64234de03_add_masjid_reviews.py  71fd965b780b_add_support_tickets.py  (+13 more)
scripts/: db.sh  gen_service_token.py  init-db.sql  seed_platform_admin.py
