[project]
name = "masjidkoi-backend"
version = "0.1.0"
description = "MasjidKoi Backend API - FastAPI + PostgreSQL/PostGIS"
authors = [
    { name = "Team T40 Insanity Check", email = "mominulislam-2021411216@cs.du.ac.bd" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",  # [asyncio] pulls in greenlet required for async engine
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "geoalchemy2[shapely]>=0.17.0",  # shapely needed for to_shape() WKB→lat/lng
    "python-multipart>=0.0.20",
    # Auth
    "PyJWT>=2.10.0",          # Verify GoTrue-issued HS256 JWTs locally
    "httpx>=0.28.0",           # Async HTTP client for GoTrue proxy calls
    "pyotp>=2.9.0",            # TOTP utilities (QR URI generation / verification)
    "adhan>=0.1.1",            # Astronomical prayer time calculation (Python port of Adhan-js)
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",  # sync driver for alembic migrations
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
